--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adarsh B | Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
 </head>
 <body class="bg-gray-900 text-white">
     <!-- Navbar -->
@@ -39,7 +40,7 @@
                 <p class="text-gray-400 mt-2">A personal website showcasing my skills and projects.</p>
             </div>
             <div class="p-6 bg-gray-800 rounded-lg shadow-lg text-center">
-                <h3 class="text-xl font-semibold">Weather App (Coming Soon)</h3>
+                <h3 class="text-xl font-semibold" href="https://github.com/adarshhbnair/weather-app">Weather App</h3>
                 <p class="text-gray-400 mt-2">A weather app using Fetch API to display real-time weather data.</p>
             </div>
         </div>
