--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- About Section -->
     <section id="about" class="p-10 bg-gray-800 text-center">
         <h2 class="text-4xl font-bold">About Me</h2>
-        <p class="text-gray-300 mt-4 max-w-3xl mx-auto">I'm an Electronics and Communication Engineering student passionate about full-stack web development. Currently exploring the MERN stack to build scalable applications.</p>
+        <p class="text-gray-300 mt-4 max-w-3xl mx-auto">I'm an Electronics and Communication Engineering student, Passionate about Full-Stack Web Development. Currently exploring the MERN stack to build scalable applications.</p>
     </section>
     
     <!-- Projects Section -->
@@ -40,8 +40,10 @@
                 <p class="text-gray-400 mt-2">A personal website showcasing my skills and projects.</p>
             </div>
             <div class="p-6 bg-gray-800 rounded-lg shadow-lg text-center">
-                <h3 class="text-xl font-semibold" href="https://github.com/adarshhbnair/weather-app">Weather App</h3>
+                <a href="https://github.com/adarshhbnair/weather-app" target="_blank" class="block">
+                <h3 class="text-xl font-semibold">Weather App</h3>
                 <p class="text-gray-400 mt-2">A weather app using Fetch API to display real-time weather data.</p>
+                </a>
             </div>
         </div>
     </section>
@@ -52,7 +54,7 @@
         <p class="text-gray-300 mt-3 text-lg">Email: <a href="mailto:adarshhbnair@gmail.com" class="text-blue-400 hover:underline">adarshhbnair@gmail.com</a></p>
         <p class="text-gray-300 mt-2 text-lg">Phone: <span class="text-blue-400">+91 9526796390</span></p>
         <div class="mt-4 space-x-4">
-            <a href="#" class="text-blue-400 text-xl hover:underline">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/adarsh-b-0b8012270/" target="_blank" class="text-blue-400 text-xl hover:underline">LinkedIn</a>
             <a href="https://github.com/adarshhbnair" target="_blank" class="text-blue-400 text-xl hover:underline">GitHub</a>
         </div>
     </section>
