--- a/index.html
+++ b/index.html
@@ -58,5 +58,14 @@
             <a href="https://github.com/adarshhbnair" target="_blank" class="text-blue-400 text-xl hover:underline">GitHub</a>
         </div>
     </section>
+    <footer class="p-4 bg-gray-800 text-center text-gray-400">
+        <p>&copy; 2025 Adarsh B. All rights reserved.</p>
+    </footer>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
+    
 </body>
 </html>
