--- a/index.html
+++ b/index.html
@@ -32,18 +32,13 @@
     </section>
     
     <!-- Projects Section -->
-    <section id="projects" class="p-10">
+    <section id="projects" class="p-16">
         <h2 class="text-4xl font-bold text-center">Projects</h2>
-        <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="mt-10 grid grid-cols-1 md:grid-cols-1 gap-6">
             <div class="p-6 bg-gray-800 rounded-lg shadow-lg text-center">
-                <h3 class="text-xl font-semibold">Portfolio Website</h3>
-                <p class="text-gray-400 mt-2">A personal website showcasing my skills and projects.</p>
-            </div>
-            <div class="p-6 bg-gray-800 rounded-lg shadow-lg text-center">
-                <a href="https://github.com/adarshhbnair/weather-app" target="_blank" class="block">
                 <h3 class="text-xl font-semibold">Weather App</h3>
                 <p class="text-gray-400 mt-2">A weather app using Fetch API to display real-time weather data.</p>
-                </a>
+                <a href="https://github.com/adarshhbnair/weather-app" target="_blank" class="mt-4 inline-block px-4 py-2 bg-blue-500 rounded-full hover:bg-blue-600 transition">View Project</a>
             </div>
         </div>
     </section>
